--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,9 +10,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    steps:
+    steps:  
       - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: Give Gradle wrapper permission
+        run: chmod +x gradlew
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
