--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,22 +10,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    steps:  
+    steps:
+      # 1. Clonar el repositorio
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: List repo files
-        run: ls -la
-
-      - name: Give Gradle wrapper permission
-        run: chmod +x braintune-backend/gradlew
-
+      # 2. Configurar JDK 17
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
 
+      # 3. Cache de dependencias de Gradle
       - name: Cache Gradle packages
         uses: actions/cache@v3
         with:
@@ -36,6 +33,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      - name: Build with Gradle
-        working-directory: braintune-backend
-        run: ./gradlew build --no-daemon
+      # 4. Dar permisos al wrapper de Gradle
+      - name: Give Gradle wrapper permission
+        run: chmod +x ./braintune-backend/gradlew
+
+      # 5. Construir ShadowJar (solo tu backend)
+      - name: Build ShadowJar
+        run: ./braintune-backend/gradlew clean shadowJar --no-daemon
