--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,3 +41,25 @@ jobs:
       - name: Build ShadowJar
         working-directory: ./braintune-backend
         run: ./gradlew clean shadowJar --no-daemon
+
+      # 6. Construir imagen Docker
+      - name: Build Docker image
+        working-directory: ./braintune-backend
+        run: docker build -t braintune-backend:latest .
+
+      # 7. Probar la imagen Docker
+      - name: Run Docker container
+        working-directory: ./braintune-backend
+        run: docker run -d -p 8080:8080 braintune-backend:latest
+
+      # 8. Subir imagen a Docker Hub
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Push Docker image
+        working-directory: ./braintune-backend
+        run: docker tag braintune-backend:latest your-dockerhub-username/braintune-backend:latest
+      - run: docker push your-dockerhub-username/braintune-backend:latest
