--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,36 +37,32 @@ jobs:
       - name: Give Gradle wrapper permission
         run: chmod +x ./braintune-backend/gradlew
 
-      # 5. Construir ShadowJar (solo tu backend)
-      - name: Build ShadowJar
-        working-directory: ./braintune-backend
-        run: ./gradlew clean shadowJar --no-daemon
-
-      # 6. Construir imagen Docker
+      # 5. Construir imagen Docker
       - name: Build Docker image
         run: docker build -t braintune-backend:latest ./braintune-backend
 
-     # 7. Probar la imagen Docker
+     # 6. Probar la imagen Docker
       - name: Run Docker container (test)
         working-directory: ./braintune-backend
         run: |
           docker run --name braintune-test --rm -d -p 8080:8080 braintune-backend:latest
 
 
-      # 8. Subir imagen a Docker Hub
+      # 7. Subir imagen a Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           
-      # 9. Hacer push al repositorio Docker Hub
+      # 8. Hacer push al repositorio Docker Hub (tag)
       - name: Push Docker image - tag
         working-directory: ./braintune-backend
         run: docker tag braintune-backend:latest $DOCKER_USERNAME/braintune-backend:latest
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
 
+      # 9. Hacer push al repositorio Docker Hub (push)
       - name: Push Docker image - push
         working-directory: ./braintune-backend
         run: docker push $DOCKER_USERNAME/braintune-backend:latest
