--- a/braintune-backend/Dockerfile
+++ b/braintune-backend/Dockerfile
@@ -1,24 +1,25 @@
-# 1. Usamos una imagen base con JDK 17
-FROM eclipse-temurin:17-jdk
+# ---- Stage 1: Build ----
+FROM eclipse-temurin:17-jdk AS build
 
-# 2. Directorio de trabajo dentro del contenedor
 WORKDIR /app
-
-# 3. Copiamos todos los archivos del proyecto (incluyendo gradlew y gradle/)
 COPY . .
-
-# 4. Damos permisos de ejecución al wrapper de Gradle
 RUN chmod +x ./gradlew
+RUN ./gradlew shadowJar --no-daemon
 
-# 5. Construimos el JAR usando el wrapper de Gradle
-RUN ./gradlew shadowJar --no-daemon || cat build/libs/*.log || true
+# Logueamos si el JAR se creó correctamente
+RUN if [ -f build/libs/*all.jar ]; then \
+        echo "JAR generado correctamente:"; \
+        ls -l build/libs/; \
+    else \
+        echo "ERROR: JAR no se creó en build/libs/"; \
+        exit 1; \
+    fi
 
-# 6. Opcional: listar archivos solo si existen
-RUN if [ -d build/libs ]; then ls -l build/libs; else echo "build/libs no existe"; fi
+# ---- Stage 2: Runtime ----
+FROM eclipse-temurin:17-jdk-jre
 
+WORKDIR /app
+COPY --from=build /app/build/libs/*all.jar ./app.jar
 
-# 7. Exponemos el puerto que usa el backend
 EXPOSE 8080
-
-# 8. Ejecutamos el JAR generado usando un patrón flexible para el nombre
-CMD ["sh", "-c", "java -jar build/libs/*all.jar"]
+CMD ["java", "-jar", "app.jar"]
