--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Clonar el repositorio
+      # 1. Clonar el repo
       - name: Checkout code
         uses: actions/checkout@v3
 
@@ -22,7 +22,7 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      # 3. Cache de dependencias de Gradle
+      # 3. Cache de Gradle
       - name: Cache Gradle packages
         uses: actions/cache@v3
         with:
@@ -33,38 +33,49 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      # 4. Dar permisos al wrapper de Gradle
+      # 4. Permisos al wrapper de Gradle
       - name: Give Gradle wrapper permission
         run: chmod +x ./braintune-backend/gradlew
 
-      # 5. Construir imagen Docker
-      - name: Build Docker image
-        run: docker build -t braintune-backend:latest ./braintune-backend
+      # 5. Construir el JAR
+      - name: Build ShadowJar
+        working-directory: ./braintune-backend
+        run: ./gradlew clean shadowJar --no-daemon
 
-     # 6. Probar la imagen Docker
-      - name: Run Docker container (test)
+      # 6. Verificar que el JAR exista
+      - name: Check JAR
         working-directory: ./braintune-backend
         run: |
-          docker run --name braintune-test --rm -d -p 8080:8080 braintune-backend:latest
+          if [ -f build/libs/*all.jar ]; then
+            echo "JAR generado correctamente:"
+            ls -l build/libs/
+          else
+            echo "ERROR: JAR no se generó"
+            exit 1
+          fi
 
+      # 7. Construir imagen Docker runtime-only
+      - name: Build Docker image
+        working-directory: ./braintune-backend
+        run: docker build -t braintune-backend:latest .
 
-      # 7. Subir imagen a Docker Hub
+      # 8. Probar la imagen Docker
+      - name: Run Docker container (test)
+        working-directory: ./braintune-backend
+        run: docker run --name braintune-test --rm -d -p 8080:8080 braintune-backend:latest
+
+      # 9. Log in a Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          
-      # 8. Hacer push al repositorio Docker Hub (tag)
-      - name: Push Docker image - tag
-        working-directory: ./braintune-backend
-        run: docker tag braintune-backend:latest $DOCKER_USERNAME/braintune-backend:latest
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
 
-      # 9. Hacer push al repositorio Docker Hub (push)
-      - name: Push Docker image - push
+      # 10. Tag y push de la imagen
+      - name: Push Docker image
         working-directory: ./braintune-backend
-        run: docker push $DOCKER_USERNAME/braintune-backend:latest
+        run: |
+          docker tag braintune-backend:latest $DOCKER_USERNAME/braintune-backend:latest
+          docker push $DOCKER_USERNAME/braintune-backend:latest
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
