--- a/braintune-backend/Dockerfile
+++ b/braintune-backend/Dockerfile
@@ -1,22 +1,20 @@
-# Solo necesita JDK para ejecutar el JAR
+# Usamos JDK completo para ejecutar el JAR
 FROM eclipse-temurin:17-jdk
 
 WORKDIR /app
 
-# Copiamos el JAR ya generado por CI
+# Copiamos el JAR generado por el workflow
 COPY build/libs/*all.jar ./app.jar
 
 # Log para verificar que el JAR exista
 RUN if [ -f app.jar ]; then \
-        echo "JAR copiado correctamente:"; \
+        echo "✅ JAR copiado correctamente:"; \
         ls -l ./app.jar; \
     else \
-        echo "ERROR: JAR no existe"; \
+        echo "❌ ERROR: JAR no existe"; \
         exit 1; \
     fi
 
 EXPOSE 8080
 
 CMD ["java", "-jar", "app.jar"]
-
-
